; ModuleID = '/home/carl/AnghaBench/Atlas/lib/extr_lpeg.c_nter_l.c'
source_filename = "/home/carl/AnghaBench/Atlas/lib/extr_lpeg.c_nter_l.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"non-nil value expected\00", align 1
@IOpenCall = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @nter_l to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nter_l(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @lua_isnoneornil(i32* %5, i32 1)
  %7 = icmp ne i32 %6, 0
  %8 = xor i1 %7, true
  %9 = zext i1 %8 to i32
  %10 = call i32 @luaL_argcheck(i32* %4, i32 %9, i32 1, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %11 = load i32*, i32** %2, align 8
  %12 = call i32* @newpatt(i32* %11, i32 1)
  store i32* %12, i32** %3, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @IOpenCall, align 4
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @value2fenv(i32* %15, i32 1)
  %17 = call i32 @setinst(i32* %13, i32 %14, i32 %16)
  ret i32 1
}

declare dso_local i32 @luaL_argcheck(i32*, i32, i32, i8*) #1

declare dso_local i32 @lua_isnoneornil(i32*, i32) #1

declare dso_local i32* @newpatt(i32*, i32) #1

declare dso_local i32 @setinst(i32*, i32, i32) #1

declare dso_local i32 @value2fenv(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
